# visi-baleine

./: Dockerfile  LICENSE  README.md  demo.py  dset_Bm_RSD.txt  pyproject.toml  requirements.txt  requirements_docker.txt  techstack.md  techstack.yml
src/: basnet.py  data_loader.py
src/model/: BASNet.py
