[tool.poetry]
name = "visi-baleine"
version = "0.1.0"
description = ""
authors = ["crowmagnumb <crowmagnumb@gmail.com>"]
readme = "README.md"
packages = [{include = "visi_baleine"}]

[tool.poetry.dependencies]
#python = "^3.10"
# To satisfy scipy version below
python = "<3.12,>=3.8"
brotlipy = "0.7.0"
einops = "0.6.1"
imageio = "2.31.1"
kornia = "0.7.0"
lazy_loader = "0.3"
#mkl-fft = "1.3"
#mkl-service = "2.4.0"
opencv-python-headless = "4.8.0.76"
packaging = "23.1"
Pillow = "9.4.0"
PyWavelets = "1.4.1"
PyYAML = "6.0.1"
scikit-image = "0.21.0"
scipy = "1.10.1"
tifffile = "2023.7.10"
torch = "2.0.1"
torchvision = "0.15.2"
triton = "2.0.0"
yacs = "0.1.8"

#
# I get why we need these, what I don't get is how my other pyproject.toml files DO NOT
# specify them and yet they end up in site-packages. Doing a `poetry show --tree` does not
# reveal them so it seems that no package mentioned in the package file requires them YET
# they get downloaded. BUT that doesn't happen here. Really need to figure out what is going
# on there.
# Also have to see if using the latest of all the above works (i.e. not specifying versions)
# and then maybe they will automatically get downloaded by something?
#
nvidia-cudnn-cu11 = "^8.9.4.25"
nvidia-nccl-cu11 = "^2.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
